--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,4 +1,191 @@
-body {
-    background-color: burlywood;
-    background-image: url('bg.image.avif');
+* {
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box; 
+    overscroll-behavior: none;
 }
+
+body {
+    background-color: #c8dbe5;
+    font-family: 'Raleway', sans-serif;   
+}
+
+header {
+    background-color: rgb(61, 61, 61);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    height: 3rem;
+}
+
+#hero-banner{
+    height: 75vh ;
+    background: url(own\ image.jpg) no-repeat center center/cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: antiquewhite;
+}
+
+h2 {
+    font-size: 5rem;
+}
+
+h3 {
+    padding-left: 150px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+h4,
+ i,
+  a {
+    padding: 0.5rem;
+
+}
+
+nav ul li a {
+    color: white;
+    padding: 1rem;
+    text-decoration: none;
+}
+a {
+    padding: 0.5rem;
+    color: tomato;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+nav ul li {
+    display: inline-block;
+    justify-content: space-between;
+}
+
+.container {
+    display: flex;
+    width: 250px;
+    background-color: white ;
+    border: solid;
+    border-color: #c5d3da; 
+    border-radius: 5px;
+    flex-wrap: wrap;
+
+}
+
+#group { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+img {
+    width: 100%;
+    padding: 0.5rem;   
+}
+
+.container1 {
+    background-color: white;
+    height: 18rem;
+}
+#H {
+    padding-top: 2rem;
+    margin-top: 2rem;
+}
+
+p {
+    padding-right: 5rem;
+    padding-top: 1rem;
+}
+.box1 {
+    height: 15rem;
+    width: 15rem;
+    padding: 10px;
+    padding-top: 5px;
+    margin-left: 8rem; 
+    float: left;   
+}
+.box {
+    background-color: white;
+    height: 10rem;
+    width: 10rem;
+    padding: 1rem;
+    border: solid;
+    border-color: #c5d3da;
+    margin-left: 9rem; 
+    float: left; 
+    text-align: center; 
+    align-items: center;
+    justify-content: space-between;
+    
+    
+}
+.fa-brands {
+    font-size: 3rem;
+   
+
+}
+.skill {
+    width: 100%;
+    margin-top: 1rem;
+   
+
+}
+#skl {
+    width: 10%;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: tomato;
+
+}
+#Acc {
+    width: 60%;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: tomato;
+}
+#OT {
+    width: 60%;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    background-color: tomato;
+}
+.container2 {
+    height: 18rem;
+    
+}
+.container3 {
+    height: 18rem;
+    background-color: rgb(92, 60, 60);
+    color: white;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    
+}  
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.send {
+    background-color: tomato;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 1rem;
+} 
+
+
+
+
+
